--- a/site/css/index.css
+++ b/site/css/index.css
@@ -21,3 +21,29 @@ h1 {
     text-align: center;
     font-family: 'Playfair Display', serif;
 }
+
+article {
+    grid-column: 3 / 8;
+    grid-row: 6 / 8;
+}
+.username {
+    display: grid;
+    grid-template-columns: repeat(5, 1fr);
+    grid-template-rows: repeat(2, 1fr);
+}
+
+.username > i {
+    margin-top: 20px;
+}
+
+.username > h3 {
+    grid-column: 2 / 5;
+    font-family: 'Source Sans Pro', sans-serif;
+}
+
+form {
+    background: none;
+    border: 0px;
+    padding: 0px;
+}
+
