--- a/site/css/index.css
+++ b/site/css/index.css
@@ -25,25 +25,89 @@ h1 {
 article {
     grid-column: 3 / 8;
     grid-row: 6 / 8;
-}
-.username {
     display: grid;
     grid-template-columns: repeat(5, 1fr);
     grid-template-rows: repeat(2, 1fr);
 }
 
-.username > i {
-    margin-top: 20px;
+.username {
+    grid-column: 1 / 6;
+    grid-row: 1;
+    display: grid;
+    grid-template-columns: inherit;
+    grid-template-rows: 1fr;
+    float: left;
+    justify-content: center;
+    margin-top: 35px;
+    align-items: center;
 }
 
-.username > h3 {
-    grid-column: 2 / 5;
+.username > * {
+    grid-column: 1 / 6;
+    grid-row: 1;
+    height: 
+}
+
+.password {
+    grid-column: 1 / 6;
+    grid-row: 2;
+    display: grid;
+    grid-template-columns: inherit;
+    grid-template-rows: 1fr;
+    float: left;
+    justify-content: center;
+    margin-top: 35px;
+    align-items: center;
+}
+
+.password > * {
+    grid-column: 1 / 6;
+    grid-row: 1;
+}
+
+input[type=text] {
+    box-sizing:border-box;
+    background: transparent;
+    border-top: none;
+    border-left: none;
+    border-right: none;
+    border-bottom: 1px solid black;
+    width: 100%;
+    height: 100%;
+    font-family: 'Source Sans Pro', sans-serif;    
+}
+
+input::placeholder {
+    font-size: 1.5em;
+}
+
+.container section {
+    grid-column: 2 / 9;
+    grid-row: 9 / 10;
+}
+
+.container nav {
+    grid-column: 3 / 8;
+    grid-row: 10 / 11;
+}
+
+.container section button {
+    box-sizing:border-box;
+    width: 100%;
+    height: 100%;
     font-family: 'Source Sans Pro', sans-serif;
+    font-size: 1.5em;    
 }
 
-form {
-    background: none;
-    border: 0px;
-    padding: 0px;
+.container nav button {
+    box-sizing:border-box;
+    width: 100%;
+    height: 100%;
+    background: transparent;
+    border: none;
+    font-family: 'Source Sans Pro', sans-serif;
+    font-size: 1.2em;
 }
+
+
 
