--- a/site/css/index.css
+++ b/site/css/index.css
@@ -96,7 +96,17 @@ input::placeholder {
     width: 100%;
     height: 100%;
     font-family: 'Source Sans Pro', sans-serif;
-    font-size: 1.5em;    
+    font-size: 1.5em;
+    background-color: #3A5CC8;
+    border-color: transparent;
+}
+
+.container section button:hover {
+    border: 1px solid #5D26A2;
+}
+
+.showFirstPageSectionButton {
+    background-color: #372EB1;
 }
 
 .container nav button {
