--- a/site/css/index.css
+++ b/site/css/index.css
@@ -1,19 +1,33 @@
 body {
-    background-color: gray;
+    height: 100vh;
+    width: 100vw;
+    margin: 0px;
+}
+
+.background-image {
+    position: fixed;
+    display: block;
+    width: 100vw;
+    height: 100vh;
+    transform: scale(1.1);
+    background: url(../img/desktop-background.jpg) no-repeat;
+    background-size: 100% 100%;
+    filter: blur(5px);
 }
 
 .container {
+    position: fixed;
     display: grid;
-    height: 640px;
-    width: 360px;
+    height: 100vh;
+    width: 100vw;
     grid-template-rows: repeat(10, 1fr);
     grid-template-columns: repeat(9, 1fr);
 }
 
 header {
-    grid-column: 3 / 8;
-    background-color: lightblue;
-    grid-row: 2 / 5;
+    grid-column: 4 / 7;
+    background-color: salmon;
+    grid-row: 1 / 3;
 }
 
 h1 {
@@ -44,7 +58,11 @@ article {
 }
 
 .username > i {
-    grid-column: 1 / 2
+    grid-column: 1 / 2;
+    font-size: 37px;
+    justify-self: right;
+    margin-right: 5px;
+    margin-bottom: 2px;
 }
 
 .password {
@@ -61,7 +79,11 @@ article {
 }
 
 .password > i {
-    grid-column: 1 / 2
+    grid-column: 1 / 2;
+    font-size: 37px;
+    justify-self: right;
+    margin-right: 5px;
+    margin-bottom: 2px;
 }
 
 input[type=text] {
@@ -70,13 +92,10 @@ input[type=text] {
     border-top: none;
     border-left: none;
     border-right: none;
-    border-bottom: 1px solid black;
+    border-bottom: 3px solid black;
     width: 100%;
     font-family: 'Source Sans Pro', sans-serif;
-}
-
-input::placeholder {
-    font-size: 1.5em;
+    font-size: 2em;
 }
 
 .Button {
@@ -90,13 +109,8 @@ input::placeholder {
     height: 100%;
     font-family: 'Source Sans Pro', sans-serif;
     font-size: 1.5em;
-    background-color: #769DC2;
+    background-color: #fff;
     border-color: transparent;
-}
-
-.toggled {
-    background-color: #3B57CC;
-    display: block;
 }
 
 nav {
@@ -111,8 +125,58 @@ nav button {
     background: transparent;
     border: none;
     font-family: 'Source Sans Pro', sans-serif;
-    font-size: 1.2em;
+    font-size: 2em;
 }
 
 
 
+@media (max-width: 1000px) {
+    body {
+        background-image: url(../img/mobile-background.jpg);
+        margin: 0px;
+        padding: 0px;
+    }
+
+    .background-image {
+        position: fixed;
+        display: block;
+        width: 100vw;
+        height: 100vh;
+        transform: scale(1.1);
+        background: url(../img/mobile-background.jpg) no-repeat;
+        background-size: 100% 100%;
+        filter: blur(5px);
+    }
+    
+    .container {
+        position: fixed;
+        display: grid;
+        width: 100vw;
+        height: 100vh;
+        grid-template-rows: repeat(10, 1fr);
+        grid-template-columns: repeat(9, 1fr);
+    }
+    
+    header {
+        grid-column: 3 / 8;
+        background-color: #f00;
+        grid-row: 2 / 5;
+    }
+
+    input[type=text] {
+        border-bottom: 1px solid black;
+        font-size: 1.5em;
+    }
+
+    nav button {
+        font-size: 1.2em;
+    }
+
+    .username > i {
+        font-size: 24px;
+    }
+
+    .password > i {
+        font-size: 24px;
+    }
+}
