--- a/site/css/index.css
+++ b/site/css/index.css
@@ -103,7 +103,11 @@ input[type=text] {
     grid-row: 9 / 10;
 }
 
-.Button button {
+.Button form {
+    height: 100%;
+}
+
+.Button form input {
     box-sizing:border-box;
     width: 100%;
     height: 100%;
