Added js, polished

--- a/site/layout.html.erb
+++ b/site/layout.html.erb
@@ -7,10 +7,10 @@
     <meta name="mobile-web-app-capable" content="yes">
     <link rel="stylesheet" href="css/main.css">
     <link href="https://fonts.googleapis.com/css?family=Playfair+Display|Source+Sans+Pro|Material+Icons" rel="stylesheet">
-    <title>Sign In</title>
+    <title>Romanitc Cruises</title>
 </head>
 <body>
     <%= yield %>
-    <script src="js/menu.js"></script>
 </body>
+    <script src="js/menu.js"></script>
 </html>
