--- a/site/css/_layout.css.scss
+++ b/site/css/_layout.css.scss
@@ -18,8 +18,8 @@
 
 header {
     grid-column: 3 / 8;
-    background-color: #f00;
     grid-row: 2 / 5;
+    display: grid;
 }
 
 article {
@@ -89,6 +89,7 @@ main {
     display: grid;
     grid-template-columns: repeat(75, 1fr);
     grid-template-rows: repeat(10, 1fr);
+    z-index: 1;
 }
 
 main > .mediterranean {
@@ -97,6 +98,25 @@ main > .mediterranean {
     align-self: center;
     margin-left: auto;
     margin-right: auto;
+}
+
+main > .menu {
+    grid-column: 75 / 76;
+    display: grid;
+}
+
+.pic {
+    grid-column: 1 / 2;
+    grid-row: 1 / 3;
+    display: none;
+    z-index: 2;
+}
+
+.pic > img {
+    width: 200px;
+    height: 196px;
+    align-self: center;
+    display: grid;
 }
 
 .main_main {
@@ -135,6 +155,11 @@ main > .mediterranean {
     display: grid;
 }
 
+.show {
+    display: grid;
+}
+
+
 @media (min-width: 1000px) {
     .container_index {
         position: fixed;
@@ -149,6 +174,11 @@ main > .mediterranean {
         grid-column: 4 / 7;
         background-color: salmon;
         grid-row: 1 / 3;
+        display: grid;
+    }
+    
+    header > img {
+        justify-self: center;
     }
 
     .container_main {
