--- a/site/css/_style.css.scss
+++ b/site/css/_style.css.scss
@@ -2,16 +2,14 @@ a > i {
     font-size: 40px;
 }
 
+.menu > i {
+    font-size: 40px;
+}
+
 h3 {
     align-self: center;
     margin-left: auto;
     margin-right: auto;
-}
-
-h1 {
-    margin-top: 72px;
-    text-align: center;
-    font-family: 'Playfair Display', serif;
 }
 
 .background-image {
@@ -20,8 +18,17 @@ h1 {
     width: 100vw;
     height: 100vh;
     transform: scale(1.1);
-    background: url(../img/desktop-background.jpg) no-repeat;
+    background: url(../img/mobile-background.jpg) no-repeat;
     background-size: 100% 100%;
+    z-index: -1;
+    filter: blur(5px);
+}
+
+header > img {
+    position: fixed;
+    display: block;
+    object-fit: cover;
+    z-index: 3;
 }
 
 input[type=text] {
@@ -49,6 +56,7 @@ input[type=text] {
     .background-image {
         width: 100vw;
         height: 100vh;
+        background: url(../img/desktop-background.jpg) no-repeat;
     }
     
     input[type=text] {
