--- a/site/index.html.erb
+++ b/site/index.html.erb
@@ -1,7 +1,7 @@
-<div class="background-image"></div>
 <div class="container_index">
+    <div class="background-image"></div>
     <header>
-        <h1>Logo</h1>
+        <img src="img/logo.png" alt="logo">
     </header>
     <article>
         <div class="username">
