--- a/site/main.html.erb
+++ b/site/main.html.erb
@@ -1,8 +1,15 @@
+<div class="background-image"></div>
 <div class="container_main">
+    <div class="pic">
+        <img src="img/logo.png" alt="logo">
+    </div>
     <main>
         <a href="index.html">
             <i class="material-icons">navigate_before</i>
         </a>
+        <div class="menu">
+            <i class="material-icons" onclick="toggleMenu()">stars</i>
+        </div>
         <div class="mediterranean">
             <h1>Mediterranean</h1>
         </div>
