--- a/site/public/css/main.css
+++ b/site/public/css/main.css
@@ -8,30 +8,6 @@ body {
     background-image: url(../img/mobile-background.jpg);
     margin: 0px;
     padding: 0px; } }
-.Button form {
-  height: 100%; }
-
-.Button form input {
-  box-sizing: border-box;
-  width: 100%;
-  height: 100%;
-  font-family: 'Source Sans Pro', sans-serif;
-  font-size: 1.5em;
-  background-color: #fff;
-  border-color: transparent; }
-
-nav button {
-  box-sizing: border-box;
-  width: 100%;
-  height: 100%;
-  background: transparent;
-  border: none;
-  font-family: 'Source Sans Pro', sans-serif;
-  font-size: 1.2em; }
-
-@media (min-width: 1000px) {
-  nav button {
-    font-size: 2em; } }
 .container_main {
   position: fixed;
   display: grid;
@@ -50,8 +26,8 @@ nav button {
 
 header {
   grid-column: 3 / 8;
-  background-color: #f00;
-  grid-row: 2 / 5; }
+  grid-row: 2 / 5;
+  display: grid; }
 
 article {
   grid-column: 3 / 8;
@@ -110,7 +86,8 @@ main {
   grid-row: 1 / 2;
   display: grid;
   grid-template-columns: repeat(75, 1fr);
-  grid-template-rows: repeat(10, 1fr); }
+  grid-template-rows: repeat(10, 1fr);
+  z-index: 1; }
 
 main > .mediterranean {
   grid-column: 2 / 76;
@@ -118,6 +95,22 @@ main > .mediterranean {
   align-self: center;
   margin-left: auto;
   margin-right: auto; }
+
+main > .menu {
+  grid-column: 75 / 76;
+  display: grid; }
+
+.pic {
+  grid-column: 1 / 2;
+  grid-row: 1 / 3;
+  display: none;
+  z-index: 2; }
+
+.pic > img {
+  width: 200px;
+  height: 196px;
+  align-self: center;
+  display: grid; }
 
 .main_main {
   grid-column: 1 / 3;
@@ -150,6 +143,9 @@ main > .mediterranean {
   grid-row: 2 / 3;
   display: grid; }
 
+.show {
+  display: grid; }
+
 @media (min-width: 1000px) {
   .container_index {
     position: fixed;
@@ -162,7 +158,11 @@ main > .mediterranean {
   header {
     grid-column: 4 / 7;
     background-color: salmon;
-    grid-row: 1 / 3; }
+    grid-row: 1 / 3;
+    display: grid; }
+
+  header > img {
+    justify-self: center; }
 
   .container_main {
     grid-template-columns: repeat(4, 1fr);
@@ -197,7 +197,34 @@ main > .mediterranean {
   .gulf_coast {
     grid-column: 4 / 5;
     grid-row: auto; } }
+.Button form {
+  height: 100%; }
+
+.Button form input {
+  box-sizing: border-box;
+  width: 100%;
+  height: 100%;
+  font-family: 'Source Sans Pro', sans-serif;
+  font-size: 1.5em;
+  background-color: #fff;
+  border-color: transparent; }
+
+nav button {
+  box-sizing: border-box;
+  width: 100%;
+  height: 100%;
+  background: transparent;
+  border: none;
+  font-family: 'Source Sans Pro', sans-serif;
+  font-size: 1.2em; }
+
+@media (min-width: 1000px) {
+  nav button {
+    font-size: 2em; } }
 a > i {
+  font-size: 40px; }
+
+.menu > i {
   font-size: 40px; }
 
 h3 {
@@ -205,19 +232,22 @@ h3 {
   margin-left: auto;
   margin-right: auto; }
 
-h1 {
-  margin-top: 72px;
-  text-align: center;
-  font-family: 'Playfair Display', serif; }
-
 .background-image {
   position: fixed;
   display: block;
   width: 100vw;
   height: 100vh;
   transform: scale(1.1);
-  background: url(../img/desktop-background.jpg) no-repeat;
-  background-size: 100% 100%; }
+  background: url(../img/mobile-background.jpg) no-repeat;
+  background-size: 100% 100%;
+  z-index: -1;
+  filter: blur(5px); }
+
+header > img {
+  position: fixed;
+  display: block;
+  object-fit: cover;
+  z-index: 3; }
 
 input[type=text] {
   box-sizing: border-box;
@@ -239,7 +269,8 @@ input[type=text] {
 @media (min-width: 1000px) {
   .background-image {
     width: 100vw;
-    height: 100vh; }
+    height: 100vh;
+    background: url(../img/desktop-background.jpg) no-repeat; }
 
   input[type=text] {
     border-bottom: 3px solid black;
